# voix-qc

./: .env.example  .gitignore  AGENTS.md  LICENSE-DATA  NOTICE  README.md  justfile  netlify.toml  pyproject.toml
.cursor/rules/: operational-principles.mdc
.github/workflows/: ci.yml
docs/: ROADMAP.md  architecture.md  changelog-sources.md  methodologie.md
docs/sources/: _global.md  calendrier.md  deputes.md  journal.md  votes.md
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js
migrations/: 001_initial.sql
scripts/: bootstrap.sh  daily_update.sh  rebuild_static.py
tests/: test_smoke.py
tests/fixtures/calendrier/: assemblee-index.html  calendrier-travaux.html  travaux-index.html
tests/fixtures/deputes/: depute-abou-khalil.html  depute-bonnardel.html  deputes-index.html
tests/fixtures/journal/: journal-43-2.html
tests/fixtures/robots/: robots.txt
tests/fixtures/votes/: registre-votes-index.html
voix/: __init__.py  cli.py  config.py  db.py  models.py
voix/analytics/: __init__.py
voix/api/: __init__.py  app.py  routes_deputes.py  routes_search.py  routes_votes.py
voix/parsers/: __init__.py
voix/scrapers/: __init__.py  base.py
