# Configuration du paquet Python Voix.qc (tracker législatif ANQ).
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voix-qc"
version = "0.1.0"
description = "Tracker législatif indépendant — votes et débats à l'Assemblée nationale du Québec."
readme = "README.md"
license = "AGPL-3.0"
requires-python = ">=3.12"
authors = [{ name = "Contributeurs Voix.qc" }]
dependencies = [
    "flask>=3.0",
    "flask-caching>=2.1",
    "httpx>=0.27",
    "pdfplumber>=0.11",
    "pydantic-settings>=2.2",
    "pymupdf>=1.24",
    "selectolax>=0.3",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.4",
]
neon = [
    "psycopg[binary]>=3.2",
]

[project.scripts]
voix = "voix.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["voix"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["voix"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
